refactor: 系统功能重构